--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -15,7 +15,7 @@
 
 <body>
     <header class="navbar-fixed">
-        <nav>
+        <nav class="blue">
             <div class="nav-wrapper">
                 <ul>
                     <li><a href="/" class="left brand-logo">&nbsp;&nbsp;GASapp</a></li>
