--- a/main_app/templates/instruments/index.html
+++ b/main_app/templates/instruments/index.html
@@ -2,8 +2,8 @@
 {% block content %}
 
 <h1>Index</h1>
-
 {% for instrument in instruments %}
+<a href="{% url 'instruments_detail' instrument.id %}">
     <div class="card">
         <div class="card-content">
             <span class="card-title">{{ instrument.name }}</span>
@@ -11,6 +11,7 @@
             <p>Type: {{ instrument.instrument_type }}</p>
         </div>
     </div>
+</a>
 {% endfor %}
 
 
