Add Update functionality

--- a/main_app/templates/instruments/detail.html
+++ b/main_app/templates/instruments/detail.html
@@ -12,10 +12,10 @@
         <p>Condition: {{ instrument.condition }}</p>
     </div>
     <div class="card-action blue-grey accent-1">
-        <a href="">Edit</a>
+        <a href="{% url 'instruments_update' instrument.id %}">Edit</a>
+        <a href="">Delete</a>
     </div>
 </div>
-
 
 
 {% endblock %}
