--- a/main_app/templates/main_app/instrument_form.html
+++ b/main_app/templates/main_app/instrument_form.html
@@ -2,9 +2,9 @@
 {% block content %}
 
 {% if object %}
-    <h1>Edit <span class="teal-text">{{object.name}}</span></h1>
+<h1>Edit <span class="teal-text">{{object.name}}</span></h1>
 {% else %}
-    <h1>Add Instrument</h1>
+<h1>Add Instrument</h1>
 {% endif %}
 <form action="" method="post">
     {% csrf_token %}
@@ -14,4 +14,8 @@
     <input type="submit" value="Submit!" class="btn">
 </form>
 
+<script>
+    const selectEl = document.getElementById('id_condition');
+    M.FormSelect.init(selectEl);
+</script>
 {% endblock %}
