--- a/main_app/templates/instruments/detail.html
+++ b/main_app/templates/instruments/detail.html
@@ -6,6 +6,7 @@
 <div class="card">
     <div class="card-content">
         <p>Manufacturer: {{ instrument.manufacturer }}</p>
+        <p>Manufacture Year: {{ instrument.year }}</p>
         <p>Serial No: {{ instrument.serial }}</p>
         <p>Type: {{ instrument.instrument_type }}</p>
         <p>Price: {{ instrument.price }}</p>
