--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -22,8 +22,9 @@
                 </ul>
                 <ul class="right">
                     {% if user.is_authenticated %}
-                    <li><a href="{% url 'instruments_index' %}">See Your Collection</a></li>
-                    <li><a href="{% url 'instruments_create' %}">Add an Item</a></li>
+                    <li><a href="{% url 'index' %}">See Your Collection</a></li>
+                    <li><a href="{% url 'instruments_create' %}">Add an Instrument</a></li>
+                    <li><a href="{% url 'accessories_create' %}">Add an Accessory</a></li>
                     <li><a href="{% url 'logout' %}">Log Out</a></li>
                     {% else %}
                     <li><a href="{% url 'signup' %}">Sign Up</a></li>
