--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -19,7 +19,7 @@
 <h1>Accessories</h1>
 
 {% for accessory in accessories %}
-<a href="">
+<a href="{% url 'accessories_detail' accessory.id %}">
     <div class="card hoverable">
         <div class="card-content">
             <span class="card-title">{{ accessory.name }}</span>
