finish CRUD for accessory model

--- a/main_app/templates/accessories/detail.html
+++ b/main_app/templates/accessories/detail.html
@@ -14,6 +14,7 @@
     </div>
     <div class="card-action blue-grey accent-1">
         <a href="{% url 'accessories_update' accessory.id %}">Edit</a>
+        <a href="{% url 'accessories_delete' accessory.id %}">Delete</a>
     </div>
 </div>
 
