--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -9,6 +9,7 @@
             <span class="card-title">{{ instrument.name }}</span>
             <p>Manufacturer: {{ instrument.manufacturer }}</p>
             <p>Type: {{ instrument.instrument_type }}</p>
+            <p>Owned?: {{ instrument.owned }}</p>
         </div>
     </div>
 </a>
@@ -25,6 +26,7 @@
             <span class="card-title">{{ accessory.name }}</span>
             <p>Manufacturer: {{ accessory.manufacturer }}</p>
             <p>Type: {{ accessory.accessory_type }}</p>
+            <p>Owned?: {{ accessory.owned }}</p>
         </div>
     </div>
 </a>
