--- a/main_app/templates/instruments/detail.html
+++ b/main_app/templates/instruments/detail.html
@@ -11,6 +11,7 @@
         <p>Type: {{ instrument.instrument_type }}</p>
         <p>Price: {{ instrument.price }}</p>
         <p>Condition: {{ instrument.get_condition_display }}</p>
+        <p>Owned?: {{ instrument.owned }}</p>
     </div>
     <div class="card-action blue-grey accent-1">
         <a href="{% url 'instruments_update' instrument.id %}">Edit</a>
