--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -2,34 +2,41 @@
 {% block content %}
 
 <h1>Instruments</h1>
+<div class="row">
 {% for instrument in instruments %}
-<a href="{% url 'instruments_detail' instrument.id %}">
-    <div class="card hoverable">
-        <div class="card-content">
-            <span class="card-title">{{ instrument.name }}</span>
-            <p>Manufacturer: {{ instrument.manufacturer }}</p>
-            <p>Type: {{ instrument.instrument_type }}</p>
-            <p>Owned?: {{ instrument.owned }}</p>
-        </div>
+    <div class="col s12 m6 l4">
+        <a href="{% url 'instruments_detail' instrument.id %}">
+            <div class="card hoverable small">
+                <div class="card-content">
+                    <span class="card-title">{{ instrument.name }}</span>
+                    <p>Manufacturer: {{ instrument.manufacturer }}</p>
+                    <p>Type: {{ instrument.instrument_type }}</p>
+                    <p>Owned?: {{ instrument.owned }}</p>
+                </div>
+            </div>
+        </a>
     </div>
-</a>
 {% endfor %}
+</div>
 
 <hr>
 
 <h1>Accessories</h1>
-
+<div class="row">
 {% for accessory in accessories %}
-<a href="{% url 'accessories_detail' accessory.id %}">
-    <div class="card hoverable">
-        <div class="card-content">
-            <span class="card-title">{{ accessory.name }}</span>
-            <p>Manufacturer: {{ accessory.manufacturer }}</p>
-            <p>Type: {{ accessory.accessory_type }}</p>
-            <p>Owned?: {{ accessory.owned }}</p>
-        </div>
+    <div class="col s12 m6 l4">
+        <a href="{% url 'accessories_detail' accessory.id %}">
+            <div class="card hoverable small">
+                <div class="card-content">
+                    <span class="card-title">{{ accessory.name }}</span>
+                    <p>Manufacturer: {{ accessory.manufacturer }}</p>
+                    <p>Type: {{ accessory.accessory_type }}</p>
+                    <p>Owned?: {{ accessory.owned }}</p>
+                </div>
+            </div>
+        </a>
     </div>
-</a>
 {% endfor %}
+</div>
 
 {% endblock %}
