--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -17,3 +17,22 @@ input[type=checkbox]:checked, input[type=checkbox]:not(:checked) {
     opacity: 1;
     pointer-events: all;
 }
+
+h1, h2, h3, h4, h5, h6, p {
+    /* blue-grey darken-3 */
+    color: #37474f; 
+}
+
+.card-container {
+    display: flex;
+}
+
+.card-container > .col {
+    margin: auto;
+}
+
+@media (max-width: 768px) {
+    .card-container {
+        flex-direction: column;
+    }
+}
