--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -6,9 +6,12 @@
 {% for instrument in instruments %}
     <div class="col s12 m6 l4">
         <a href="{% url 'instruments_detail' instrument.id %}">
-            <div class="card hoverable small">
-                <div class="card-content">
+            <div class="card hoverable large">
+                <div class="card-image">
+                    <img src="https://via.placeholder.com/150">
                     <span class="card-title">{{ instrument.name }}</span>
+                </div>
+                <div class="card-content">
                     <p>Manufacturer: {{ instrument.manufacturer }}</p>
                     <p>Type: {{ instrument.instrument_type }}</p>
                     <p>Owned?: {{ instrument.owned }}</p>
@@ -26,9 +29,12 @@
 {% for accessory in accessories %}
     <div class="col s12 m6 l4">
         <a href="{% url 'accessories_detail' accessory.id %}">
-            <div class="card hoverable small">
+            <div class="card hoverable large">
+                <div class="card-image">
+                    <img src="https://via.placeholder.com/150">
+                    <span class="card-title">{{ instrument.name }}</span>
+                </div>
                 <div class="card-content">
-                    <span class="card-title">{{ accessory.name }}</span>
                     <p>Manufacturer: {{ accessory.manufacturer }}</p>
                     <p>Type: {{ accessory.accessory_type }}</p>
                     <p>Owned?: {{ accessory.owned }}</p>
