--- a/main_app/templates/instruments/detail.html
+++ b/main_app/templates/instruments/detail.html
@@ -2,20 +2,69 @@
 {% block content %}
 
 <h1>{{ instrument.name }}</h1>
-
-<div class="card">
-    <div class="card-content">
-        <p>Manufacturer: {{ instrument.manufacturer }}</p>
-        <p>Manufacture Year: {{ instrument.year }}</p>
-        <p>Serial No: {{ instrument.serial }}</p>
-        <p>Type: {{ instrument.instrument_type }}</p>
-        <p>Price: {{ instrument.price }}</p>
-        <p>Condition: {{ instrument.get_condition_display }}</p>
-        <p>Owned?: {{ instrument.owned }}</p>
+<div class="row card-container">
+    <div class="col s12 m8 l6">
+        <div class="card">
+            <div class="card-content">
+                <p>Manufacturer: {{ instrument.manufacturer }}</p>
+                <p>Manufacture Year: {{ instrument.year }}</p>
+                <p>Serial No: {{ instrument.serial }}</p>
+                <p>Type: {{ instrument.instrument_type }}</p>
+                <p>Price: {{ instrument.price }}</p>
+                <p>Condition: {{ instrument.get_condition_display }}</p>
+                <p>Owned?: {{ instrument.owned }}</p>
+            </div>
+            <div class="card-action blue-grey accent-1">
+                <a href="{% url 'instruments_update' instrument.id %}">Edit</a>
+                <a href="{% url 'instruments_delete' instrument.id %}">Delete</a>
+            </div>
+        </div>
     </div>
-    <div class="card-action blue-grey accent-1">
-        <a href="{% url 'instruments_update' instrument.id %}">Edit</a>
-        <a href="{% url 'instruments_delete' instrument.id %}">Delete</a>
+</div>
+
+<hr class="blue-grey">
+
+<h3>Accessories for this instrument:</h3>
+<div class="row card-container">
+    <div class="col s12 m6">
+        <div class="card">
+            <div class="card-content">
+                <h4>ADD ACCESSORY FORM HERE</h4>
+                <p>Don't see the one you want?</p>
+                <a href="{% url 'accessories_create' %}">Click here to add a new one</a>
+            </div>
+        </div>
+    </div>
+    {% if instrument.accessories.count %}
+
+    {% else %}
+        <div class="col s12 m6">
+            <div class="card">
+                <div class="card-content">
+                    <h4>No associated accessories yet.</h4>
+                </div>
+            </div>
+        </div>
+    {% endif %}   
+</div>
+
+<hr class="blue-grey">
+
+<h3>Photos for this instrument:</h3>
+<div class="row card-container">
+    <div class="col s12 m6">
+        <div class="card">
+            <div class="card-content">
+                <h4>ADD PHOTO FORM HERE</h4>
+            </div>
+        </div>
+    </div>
+    <div class="col s12 m6">
+        <div class="card">
+            <div class="card-content">
+                <h4>No photos yet.</h4>
+            </div>
+        </div>
     </div>
 </div>
 
