--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -23,6 +23,11 @@ h1, h2, h3, h4, h5, h6, p {
     color: #37474f; 
 }
 
+.btn {
+    /* blue-grey */
+    background-color: #607d8b;
+}
+
 .card-container {
     display: flex;
 }
