--- a/main_app/templates/accessories/detail.html
+++ b/main_app/templates/accessories/detail.html
@@ -48,22 +48,6 @@
         </div>
     {% endif %}   
 </div>
-<div class="card">
-    <div class="card-content">
-        {% for photo in accessory.photo_set.all %}
-        <img class="responsive-img card-panel" src="{{photo.url}}">
-        {% empty %}
-        <div class="card-panel teal-text center-align">No Photos Uploaded</div>
-        {% endfor %}
-        <form action="{% url 'add_photo' 0 accessory.id %}" enctype="multipart/form-data" method="POST"
-            class="card-panel">
-            {% csrf_token %}
-            <input type="file" name="photo-file">
-            <br><br>
-            <button type="submit" class="btn crud-btn indigo accent-1">Submit Photo</button>
-        </form>
-    </div>
-</div>
 
 <hr class="blue-grey">
 
@@ -72,7 +56,18 @@
     <div class="col s12 m6">
         <div class="card">
             <div class="card-content">
-                <h4>ADD PHOTO FORM HERE</h4>
+                {% for photo in accessory.accessoryphoto_set.all %}
+                <img class="responsive-img card-panel" src="{{photo.url}}">
+                {% empty %}
+                <div class="card-panel teal-text center-align">No Photos Uploaded</div>
+                {% endfor %}
+                <form action="{% url 'add_photo' 0 accessory.id %}" enctype="multipart/form-data" method="POST"
+                    class="card-panel">
+                    {% csrf_token %}
+                    <input type="file" name="photo-file">
+                    <br><br>
+                    <button type="submit" class="btn crud-btn indigo accent-1">Submit Photo</button>
+                </form>
             </div>
         </div>
     </div>
