--- a/main_app/templates/instruments/detail.html
+++ b/main_app/templates/instruments/detail.html
@@ -55,7 +55,18 @@
     <div class="col s12 m6">
         <div class="card">
             <div class="card-content">
-                <h4>ADD PHOTO FORM HERE</h4>
+                {% for photo in instrument.instrumentphoto_set.all %}
+                <img class="responsive-img card-panel" src="{{ photo.url }}">
+                {% empty %}
+                <div class="card-panel teal-text center-align">No Photos Uploaded</div>
+                {% endfor %}
+                <form action="{% url 'add_photo' instrument.id 0 %}" enctype="multipart/form-data" method="POST"
+                    class="card-panel">
+                    {% csrf_token %}
+                    <input type="file" name="photo-file">
+                    <br><br>
+                    <button type="submit" class="btn crud-btn indigo accent-1">Submit Photo</button>
+                </form>
             </div>
         </div>
     </div>
@@ -65,22 +76,6 @@
                 <h4>No photos yet.</h4>
             </div>
         </div>
-    </div>
-</div>
-<div class="card">
-    <div class="card-content">
-        {% for photo in instrument.photo_set.all %}
-        <img class="responsive-img card-panel" src="{{photo.url}}">
-        {% empty %}
-        <div class="card-panel teal-text center-align">No Photos Uploaded</div>
-        {% endfor %}
-        <form action="{% url 'add_photo' instrument.id 0 %}" enctype="multipart/form-data" method="POST"
-            class="card-panel">
-            {% csrf_token %}
-            <input type="file" name="photo-file">
-            <br><br>
-            <button type="submit" class="btn crud-btn indigo accent-1">Submit Photo</button>
-        </form>
     </div>
 </div>
 
