--- a/main_app/templates/instruments/detail.html
+++ b/main_app/templates/instruments/detail.html
@@ -57,15 +57,18 @@
             <div class="card-content">
                 {% for photo in instrument.instrumentphoto_set.all %}
                 <img class="responsive-img card-panel" src="{{ photo.url }}">
+                <form action="{% url 'delete_photo' photo.id instrument.id 0 %}">
+                    <button type="submit" class="btn btn-small">Delete</button>
+                </form>
                 {% empty %}
-                <div class="card-panel teal-text center-align">No Photos Uploaded</div>
+                <div class="card-panel blue-grey-text center-align">No Photos Uploaded</div>
                 {% endfor %}
                 <form action="{% url 'add_photo' instrument.id 0 %}" enctype="multipart/form-data" method="POST"
                     class="card-panel">
                     {% csrf_token %}
                     <input type="file" name="photo-file">
                     <br><br>
-                    <button type="submit" class="btn crud-btn indigo accent-1">Submit Photo</button>
+                    <button type="submit" class="btn">Submit Photo</button>
                 </form>
             </div>
         </div>
