--- a/main_app/templates/instruments/detail.html
+++ b/main_app/templates/instruments/detail.html
@@ -5,6 +5,10 @@
 <div class="row card-container">
     <div class="col s12 m8 l6">
         <div class="card">
+            <div class="card-image">
+                <img src="{{ instrument.instrumentphoto_set.first.url }}">
+                <span class="card-title">{{ instrument.name }}</span>
+            </div>
             <div class="card-content">
                 <p>Manufacturer: {{ instrument.manufacturer }}</p>
                 <p>Manufacture Year: {{ instrument.year }}</p>
@@ -12,7 +16,14 @@
                 <p>Type: {{ instrument.instrument_type }}</p>
                 <p>Price: {{ instrument.price }}</p>
                 <p>Condition: {{ instrument.get_condition_display }}</p>
-                <p>Owned?: {{ instrument.owned }}</p>
+                <p>
+                    Owned: 
+                    {% if instrument.owned %}
+                        <span style="color:green">True</span>
+                    {% else %}
+                        <span style="color:red">False</span>
+                    {% endif %}
+                </p>
             </div>
             <div class="card-action blue-grey accent-1">
                 <a href="{% url 'instruments_update' instrument.id %}">Edit</a>
