--- a/main_app/templates/instruments/detail.html
+++ b/main_app/templates/instruments/detail.html
@@ -4,7 +4,7 @@
 <h1>{{ instrument.name }}</h1>
 <div class="row card-container">
     <div class="col s12 m8 l6">
-        <div class="card">
+        <div class="card extra-large">
             <div class="card-image">
                 <img src="{{ instrument.instrumentphoto_set.first.url }}">
                 <span class="card-title">{{ instrument.name }}</span>
