--- a/main_app/templates/accessories/detail.html
+++ b/main_app/templates/accessories/detail.html
@@ -5,7 +5,7 @@
 
 <div class="row card-container">
     <div class="col s12 m8 l6">
-        <div class="card">
+        <div class="card extra-large">
             <div class="card-image">
                 <img src="{{ accessory.accessoryphoto_set.first.url }}">
                 <span class="card-title">{{ accessory.name }}</span>
