--- a/main_app/templates/instruments/detail.html
+++ b/main_app/templates/instruments/detail.html
@@ -110,4 +110,20 @@
     </div>
 </div>
 
+<hr class="blue-grey">
+
+<h3>Reverb valuation:</h3>
+<div class="row card-container">
+    <div class="col s12 m8">
+        <div class="card">
+            <div class="card-content">
+                <span class="card-title">Reverb.com Price Guide for: <span class="bold">{{ instrument.name }}</span></span>
+                <p><span class="bold">Title: </span> {{ price_guide.title }}</p>
+                <p><span class="bold">Est. Used Price Range: </span> {{ price_guide.low }} - {{ price_guide.low }}</p>
+                <p><span class="bold">Link: </span> {{ price_guide.url }}</p>
+            </div>
+        </div>
+    </div>
+</div>
+
 {% endblock %}
